--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ footer {
     display: flex;
     align-items: center;
     border-radius: 50px;
-    box-shadow: 0px 0px 5px 2px #e2e2e2; 
+    box-shadow: 0px 0px 5px 2px #e2e2e2fd; 
 }
 
 input {
